[package]
name = "healing-habits"
version = "0.1.0"
edition = "2021"
authors = ["David Liedle"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
